# c-cut

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  c-cut_logs.txt  main.c  valgrind_test.sh
.github/workflows/: cmake.yml
cmake/: .Warnings.cmake.swp  Warnings.cmake
include/: color.h  cpuAnalyzer.h  cutThreads.h  logMacro.h  logQueue.h  logsQueue.h  msTimer.h  sigtermHandler.h  statStruct.h  statStructQueue.h  watchdogStruct.h  watchdogTimer.h
source/: analyzerThread.c  cpuAnalyzer.c  logQueue.c  loggerThread.c  msTimer.c  printerThread.c  readerThread.c  statStruct.c  statStructQueue.c  watchdogStruct.c  watchdogThread.c  watchdogTimer.c
source/threads/: analyzerThread.c  loggerThread.c  printerThread.c  readerThread.c  watchdogThread.c
tests/: c-cut_logs_test.txt  cpuAnalyzerTest.c  logQueueTest.c  msTimerTest.c  readerTest.c  test.c
